# supersdp

./: .gitignore  LICENSE  README.md  case_studies.py  environment.yml  pyproject.toml  requirements.txt  sdp_geometry_demo.py  sdp_geometry_demo2.py  setup.cfg
.claude/: settings.local.json
examples/: demo_system.mat  run_toolbox_hinf.py  run_toolbox_minimal.py  test_l2ca_fi_msd8.py
src/l2ws/: __init__.py  applications.py  benchmarks.py  cli.py  data.py  graph_utils.py  ipm.py  l2a.py  l2ca.py  l2ca_fi.py  l2ws.py  learning.py  lifecycle.py  models.py  perturbations.py  problem.py  runner.py  toolbox.py  training.py
tests/: test_cholesky.py  test_graph.py  test_ipm.py  test_models.py  test_toolbox.py
