[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l2ws"
version = "0.2.0"
description = "Learning to warm-start interior-point methods for adaptive semidefinite programs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "L2WS Contributors" }
]
keywords = ["sdp", "interior-point", "warm-start", "control", "deep-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "cvxpy>=1.4",
  "torch>=2.2",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
gnn = ["torch-geometric>=2.4"]
dev = ["pytest>=7.4", "black>=24.3", "ruff>=0.6"]
all = ["torch-geometric>=2.4", "pytest>=7.4", "black>=24.3", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
